<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ListItemsActivity"
    android:columnCount="2"
    android:rowCount="2">

    <RadioButton
        android:id="@+id/rb"
        android:layout_columnWeight="1"
        android:layout_column="0"
        android:layout_row="0"
        android:gravity="fill"
        android:text="@string/radio_button" />

    <CheckBox
        android:id="@+id/cb"
        android:layout_columnWeight="1"
        android:layout_column="1"
        android:layout_row="0"
        android:gravity="fill"
        android:text="@string/check_box"/>
    <Switch
        android:id="@+id/sw"
        android:layout_columnWeight="1"
        android:layout_column="0"
        android:layout_row="1"
        android:gravity="fill"
        android:text="@string/sw"/>

    <ImageButton
        android:id="@+id/ibtn"
        android:contentDescription="@string/description"
        android:layout_columnWeight="1"
        android:layout_column="1"
        android:layout_row="1"
        android:gravity="fill"
        android:src="@android:drawable/ic_menu_camera" />

</GridLayout>